Modified code including classification report

--- a/credit_risk_classification.ipynb
+++ b/credit_risk_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "4                 1       23000            0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
        "max          16.000000          3.000000  75200.000000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +524,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,9 +578,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(random_state=1)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Import the LogisticRegression module from SKLearn\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -590,7 +601,7 @@
     "model = LogisticRegression(random_state=1)\n",
     "\n",
     "# Fit the model using training data\n",
-    "lr_model = model.fit(X_train, y_train)"
+    "model.fit(X_train, y_train)"
    ]
   },
   {
@@ -602,10 +613,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Generate training predictions\n",
+    "training_predictions = model.predict(X_train)\n",
+    "\n",
     "# Make a prediction using the testing data\n",
     "testing_predictions = model.predict(X_test)"
    ]
@@ -625,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -634,19 +648,19 @@
        "0.9520479254722232"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Print the balanced_accuracy score of the model\n",
-    "balanced_accuracy_score(y_test, testing_predictions )"
+    "balanced_accuracy_score(y_test, testing_predictions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -671,6 +685,35 @@
    "source": [
     "# Print the classification report for the model\n",
     "print(test_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      0.99      1.00     18765\n",
+      "           1       0.85      0.91      0.88       619\n",
+      "\n",
+      "    accuracy                           0.99     19384\n",
+      "   macro avg       0.92      0.95      0.94     19384\n",
+      "weighted avg       0.99      0.99      0.99     19384\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create and save the training classification report\n",
+    "testing_report = classification_report(y_test, testing_predictions)\n",
+    "\n",
+    "# Print the training classification report\n",
+    "print(testing_report)"
    ]
   },
   {
@@ -712,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,20 +764,33 @@
     "\n",
     "# Instantiate the random oversampler model\n",
     "# # Assign a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "random_over_sampler = RandomOverSampler(random_state=1)\n",
     "\n",
     "# Fit the original training data to the random_oversampler model\n",
-    "# YOUR CODE HERE!"
+    "X_resampled, y_resampled = random_over_sampler.fit_resample(X_train, y_train)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    56271\n",
+       "0    56271\n",
+       "Name: loan_status, dtype: int64"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Count the distinct values of the resampled labels data\n",
-    "# YOUR CODE HERE!"
+    "y_resampled.value_counts()"
    ]
   },
   {
@@ -746,19 +802,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Instantiate the Logistic Regression model\n",
     "# Assign a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "model_rs = LogisticRegression(random_state=1)\n",
     "\n",
     "# Fit the model using the resampled training data\n",
-    "# YOUR CODE HERE!\n",
+    "model_rs.fit(X_resampled, y_resampled)\n",
+    "\n",
+    "#Generate training predictions\n",
+    "training_predictions_rs = model_rs.predict(X_train)\n",
     "\n",
     "# Make a prediction using the testing data\n",
-    "# YOUR CODE HERE!"
+    "testing_predictions_rs = model_rs.predict(X_test)\n"
    ]
   },
   {
@@ -776,32 +835,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9936781215845847"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Print the balanced_accuracy score of the model \n",
-    "# YOUR CODE HERE!"
+    "# Print the balanced_accuracy score of the model\n",
+    "balanced_accuracy_score(y_test, testing_predictions_rs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Generate a confusion matrix for the model\n",
-    "# YOUR CODE HERE!"
+    "test_matrix_rs = confusion_matrix(y_test, testing_predictions_rs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[18649   116]\n",
+      " [    4   615]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the classification report for the model\n",
-    "# YOUR CODE HERE!"
+    "print(test_matrix_rs)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      0.99      1.00     18765\n",
+      "           1       0.84      0.99      0.91       619\n",
+      "\n",
+      "    accuracy                           0.99     19384\n",
+      "   macro avg       0.92      0.99      0.95     19384\n",
+      "weighted avg       0.99      0.99      0.99     19384\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create and save the training classification report\n",
+    "training_report = classification_report(y_test, testing_predictions_rs)\n",
+    "\n",
+    "# Print the training classification report\n",
+    "print(training_report)"
    ]
   },
   {
