--- a/credit_risk_classification.ipynb
+++ b/credit_risk_classification.ipynb
@@ -724,12 +724,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
+    "**Question:** How well does the logistic regression model predicts both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** WRITE YOUR ANSWER HERE!"
+    "**Answer:** The model achieves better results predicting healty loans than high-risk loans. It predicts the healthy loans with 99% accuracy and the high-risk loans with 91% accuracy. The model is overall 99% accurate."
    ]
   },
   {
@@ -920,12 +921,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "**Question:** How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** YOUR ANSWER HERE!"
+    "**Answer:** The model achieves similar results predicting healty loans and high-risk loans. It predicts both the healthy loans and the high-risk loans with 99% accuracy. The model is overall 99% accurate."
    ]
   }
  ],
