--- a/credit_risk_classification.ipynb
+++ b/credit_risk_classification.ipynb
@@ -730,7 +730,7 @@
    "source": [
     "**Question:** How well does the logistic regression model predicts both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** The model achieves better results predicting healty loans than high-risk loans. It predicts the healthy loans with 99% accuracy and the high-risk loans with 91% accuracy. The model is overall 99% accurate."
+    "**Answer:** The model achieves better results predicting healty loans than high-risk loans. It predicts the healthy loans with 99% accuracy and the high-risk loans with 91% accuracy."
    ]
   },
   {
@@ -927,7 +927,7 @@
    "source": [
     "**Question:** How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** The model achieves similar results predicting healty loans and high-risk loans. It predicts both the healthy loans and the high-risk loans with 99% accuracy. The model is overall 99% accurate."
+    "**Answer:** The model achieves similar results predicting healty loans and high-risk loans. It predicts both the healthy loans and the high-risk loans with 99% accuracy."
    ]
   }
  ],
